tests/checker/fail/conjured_capability.can
main = () => Unit {
    "hi".print(Stdout)
}
